// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change-vite-ts-paths-plugin migration should add build outDir to vite.config.ts 1`] = `
"/// <reference types="vitest" />
import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import viteTsConfigPaths from 'vite-tsconfig-paths';

export default defineConfig({
  root: __dirname,
  build: {
    outDir: '../../dist/apps/demo',
    reportCompressedSize: true,
    commonjsOptions: {
      transformMixedEsModules: true,
    },
  },
  cacheDir: '../../node_modules/.vite/demo',
  server: {
    port: 4200,
    host: 'localhost',
  },

  preview: {
    port: 4300,
    host: 'localhost',
  },

  plugins: [
    react(),
    viteTsConfigPaths({
      root: '../../',
    }),
  ],

  // Uncomment this if you are using workers.
  // worker: {
  //  plugins: [
  //    viteTsConfigPaths({
  //      root: '../../',
  //    }),
  //  ],
  // },

  test: {
    reporters: ['default'],
    coverage: {
      reportsDirectory: '../../coverage/apps/demo',
      provider: 'v8',
    },
    globals: true,
    cache: {
      dir: '../../node_modules/.vitest',
    },
    environment: 'jsdom',
    include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
  },
});
"
`;

exports[`change-vite-ts-paths-plugin migration should add build outDir to vite.config.ts if build exists 1`] = `
"/// <reference types="vitest" />
import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import viteTsConfigPaths from 'vite-tsconfig-paths';

export default defineConfig({
  root: __dirname,
  cacheDir: '../../node_modules/.vite/demo2',
  server: {
    port: 4200,
    host: 'localhost',
  },

  preview: {
    port: 4300,
    host: 'localhost',
  },

  plugins: [
    react(),
    viteTsConfigPaths({
      root: '../../',
    }),
  ],

  build: {
    outDir: '../dist/demo2',
    reportCompressedSize: true,
    commonjsOptions: { transformMixedEsModules: true },
    someProperty: 'someValue',
  },

  test: {
    reporters: ['default'],
    coverage: {
      reportsDirectory: '../coverage/demo2',
      provider: 'v8',
    },
    globals: true,
    cache: {
      dir: '../../node_modules/.vitest',
    },
    environment: 'jsdom',
    include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
  },
});
"
`;

exports[`change-vite-ts-paths-plugin migration should add file replacements to vite.config.ts 1`] = `
"/// <reference types="vitest" />
import replaceFiles from '@nx/vite/plugins/rollup-replace-files.plugin';
import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import viteTsConfigPaths from 'vite-tsconfig-paths';

export default defineConfig({
  root: __dirname,
  cacheDir: '../../node_modules/.vite/demo3',
  server: {
    port: 4200,
    host: 'localhost',
  },

  preview: {
    port: 4300,
    host: 'localhost',
  },

  plugins: [
    replaceFiles([
      {
        replace: 'demo3/src/environments/environment.ts',
        with: 'demo3/src/environments/environment.prod.ts',
      },
    ]),
    react(),
    viteTsConfigPaths({
      root: '../../',
    }),
  ],

  build: {
    outDir: '../dist/demo3',
    reportCompressedSize: true,
    commonjsOptions: { transformMixedEsModules: true },
    someProperty: 'someValue',
  },

  test: {
    reporters: ['default'],
    coverage: {
      reportsDirectory: '../coverage/demo3',
      provider: 'v8',
    },
    globals: true,
    cache: {
      dir: '../../node_modules/.vitest',
    },
    environment: 'jsdom',
    include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
  },
});
"
`;

exports[`change-vite-ts-paths-plugin migration should convert the file correctly 1`] = `
"/// <reference types='vitest' />
import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';

export default defineConfig(({ mode }) => {
  return {
    root: __dirname,
    build: {
      outDir: '../dist/demo4',
      reportCompressedSize: true,
      commonjsOptions: {
        transformMixedEsModules: true,
      },
    },
    cacheDir: '../../node_modules/.vite/demo4',
    server: {
      port: 4200,
      host: 'localhost',
    },

    preview: {
      port: 4300,
      host: 'localhost',
    },

    plugins: [react(), nxViteTsPaths()],

    // Uncomment this if you are using workers.
    // worker: {
    //  plugins: [ nxViteTsPaths() ],
    // },

    test: {
      reporters: ['default'],
      coverage: {
        reportsDirectory: '../coverage/demo4',
        provider: 'v8',
      },
      globals: true,
      cache: {
        dir: '../../node_modules/.vitest',
      },
      environment: 'jsdom',
      include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    },
  };
});
"
`;

exports[`change-vite-ts-paths-plugin migration should convert the file correctly 2`] = `
"/// <reference types='vitest' />
import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';

export default defineConfig(({ mode }) => {
  return {
    root: __dirname,
    build: {
      outDir: '../dist/demo4',
      reportCompressedSize: true,
      commonjsOptions: {
        transformMixedEsModules: true,
      },
    },
    cacheDir: '../../node_modules/.vite/demo4',
    server: {
      port: 4200,
      host: 'localhost',
    },

    preview: {
      port: 4300,
      host: 'localhost',
    },

    plugins: [react(), nxViteTsPaths()],

    // Uncomment this if you are using workers.
    // worker: {
    //  plugins: [ nxViteTsPaths() ],
    // },

    test: {
      reporters: ['default'],
      coverage: {
        reportsDirectory: '../coverage/demo4',
        provider: 'v8',
      },
      globals: true,
      cache: {
        dir: '../../node_modules/.vitest',
      },
      environment: 'jsdom',
      include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    },
  };
});
"
`;

exports[`change-vite-ts-paths-plugin migration should correctly migrate the vite config within the file and not other object literals 1`] = `
"/// <reference types="vitest" />
import react from '@vitejs/plugin-react';
import dns from 'dns';
import { PluginOption, defineConfig } from 'vite';
import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';

dns.setDefaultResultOrder('verbatim');
const BASE_HREF = '/app';

/**
 * Adds <base href="/app">\` to the head of the index.html
 * The reason why the \`base\` configuration property doesn't work is because it makes
 * all assets served under \`/app\` of \`/\` and this impacts the download zip service worker
 * We only want to the service worker to listen to events related to downloads, but not capture any other events
 * and the only way to do this is make sure all assets are served from the root, but we still want our app path to be \`/app\`
 *
 * This mimics the same behavior we had with webpack before migrating to vite
 */
const baseHrefPlugin: () => PluginOption = () => {
  return {
    name: 'html-transform',
    transformIndexHtml(html) {
      return html.replace('<head>', \`<head>\\n    <base href="\${BASE_HREF}">\`);
    },
  };
};

export default defineConfig({
  root: __dirname,
  cacheDir: '../../node_modules/.vite/jetstream',
  envPrefix: 'NX',

  server: {
    port: 4200,
    host: 'localhost',
  },

  build: {
    outDir: '../../dist/apps/demo',
    reportCompressedSize: true,
    commonjsOptions: { transformMixedEsModules: true }, // Put all assets at the root of the app instead of under /assets
    assetsDir: './',
    sourcemap: true,
    rollupOptions: {
      output: {
        sourcemap: true,
      },
    },
  },

  plugins: [
    react({
      jsxImportSource: '@emotion/react',
      babel: {
        plugins: ['@emotion/babel-plugin'],
      },
    }),
    nxViteTsPaths(),
    baseHrefPlugin(),
  ],

  worker: {
    plugins: [nxViteTsPaths()],
  },
});
"
`;

exports[`change-vite-ts-paths-plugin migration should show warning to the user if could not recognize config 1`] = `
"// some invalid config
"
`;
